Support Java 9+